FIX Section card - sistemata la lunghezza delle card align-items:stretch alla row e height:100% alla card

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ a{
     flex-wrap: wrap;
 }
 
+.align-stretch{
+    align-items: stretch;
+}
+
 .container-fw{
     max-width: 100%;
 }
@@ -122,6 +126,10 @@ a{
 
 .mb-50{
     margin-bottom: 50px;
+}
+
+.mr-50{
+    margin-right: 50px;
 }
 
 .mb-60{
@@ -213,6 +221,7 @@ a{
 
 .small-title{
     font-size: 16px;
+    font-weight: 600;
 }
 
 .title-3{
@@ -282,11 +291,6 @@ span.main-text{
     padding: 150px 0;
 }
 
-.row-main-content{
-    align-items: flex-start;
-    row-gap: 50px;
-}
-
 .pallino-pieno::before{
     font-family: "Font Awesome 6 Free";
     font-weight: 900;
@@ -301,9 +305,13 @@ span.main-text{
 }
 
 /* CARD RULES */
+.main-content .row.align-stretch{
+    row-gap: 50px;
+}
 
 .card{
  border: 2px solid rgb(134, 134, 134);
+ height: 100%;
 }
 
 .card .category-card{
@@ -433,5 +441,11 @@ ul.direction-col{
 
 .prova-gratuita-section{
     background-color: #B4D0E7;
+    padding: 150px 0;
+}
+
+/* Q&A RULES */
+
+.domande-frequenti-section{
     padding: 150px 0;
 }
